--- a/package.json
+++ b/package.json
@@ -24,9 +24,8 @@
         }
     },
     "dependencies": {
-        "pug": "^3.0.2",
         "pretty": "^2.0.0",
-        "mkdirp": "^1.0.4"
+        "pug": "^3.0.2"
     },
     "devDependencies": {
         "eslint": "^8.4.1"
