--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
         }
     },
     "dependencies": {
-        "pretty": "^2.0.0",
+        "js-beautify": "^1.14.0",
         "pug": "^3.0.2"
     },
     "devDependencies": {
