--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,4 +20,4 @@ jobs:
       - name: Install dependencies
         run: apm ci
       - name: Run tests
-        run: atom --test --timeout 10 ./spec/*-spec.js
+        run: atom --test --timeout 10 spec
