--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,13 +11,8 @@ jobs:
         platform: [ ubuntu-latest, macos-latest, windows-latest ]
     runs-on: ${{ matrix.platform }}
     steps:
+      - run: git config --global core.autocrlf false
       - uses: actions/checkout@v2
       - uses: uzitech/action-setup-atom@v2
-      - name: Atom version
-        run: atom -v
-      - name: APM version
-        run: apm -v
-      - name: Install dependencies
-        run: apm ci
-      - name: Run tests
-        run: atom --test --timeout 10 spec
+      - run: apm ci
+      - run: atom --test --timeout 10 spec
